--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+      env:
+        PUBLIC_URL: "/ukuplayee/"
 
     - name: deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
